# wadocx

./: Dockerfile  README.md  RENDER_DEPLOYMENT.md  mcp-config.json  pyproject.toml  setup_mcp.py  smithery.yaml  test_formatting.py  wadocx_mcp.py
scripts/: __init__.py  compile_iso_template_draft.py
tests/: test_edit_stability.py  test_header_footer_tools.py  test_mcp_markdown_registration.py  test_word_fields_and_equations.py
wadocx/: __init__.py  __main__.py
word_document_server/: __init__.py  main.py
word_document_server/core/: __init__.py  protection.py  styles.py  tables.py  unprotect.py
word_document_server/tools/: __init__.py  comment_tools.py  content_tools.py  document_tools.py  extended_document_tools.py  footnote_tools.py  format_tools.py  iso_template_tools.py  markdown_tools.py  protection_tools.py
word_document_server/utils/: __init__.py  document_utils.py  extended_document_utils.py  file_utils.py  markdown_utils.py
